feat: Add AI-driven troubleshooting feature
- Add separate troubleshooting mode with UI toggle (Command/Troubleshoot)
- Implement multi-step workflow engine (diagnostics, fixes, verification)
- Create specialized AI prompt for error analysis and remediation
- Add /troubleshoot and /troubleshoot/execute REST endpoints
- Include risk level assessment (low/medium/high) with color coding
- Maintain complete separation from existing command generation feature
- Update .gitignore with OpsPilot-specific entries
- Add comprehensive documentation and test scripts

New Files:
- ai_shell_agent/prompt_troubleshoot.py: Specialized troubleshooting prompt
- ai_shell_agent/ai_troubleshoot.py: AI handler for error analysis
- ai_shell_agent/troubleshoot_runner.py: Workflow execution engine
- TROUBLESHOOT_FEATURE.md: Complete feature documentation
- test_troubleshoot.py: Test script for AI responses
- Helper scripts: Git commit guides and automation

Modified Files:
- app.py: Added troubleshooting endpoints
- frontend/index.html: Added mode toggle and troubleshoot input
- frontend/app.js: Added troubleshooting UI logic (~240 lines)
- frontend/style.css: Added troubleshoot mode styling
- .gitignore: Added OpsPilot-specific entries

--- a/.gitignore
+++ b/.gitignore
@@ -84,7 +84,7 @@ ipython_config.py
 
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
+#   intended to run in multiple frequenvironments; otherwise, check them in:
 # .python-version
 
 # pipenv
@@ -329,3 +329,35 @@ install_dependencies_wsl.sh
 
 # Setup guides (if you prefer not to track)
 # SETUP_GUIDE.md
+
+# OpsPilot specific
+# SSH session data
+ssh_sessions/
+*.session
+
+# Test outputs
+test_output/
+test_results/
+
+# Local configuration overrides
+config.local.py
+settings.local.py
+
+# Troubleshooting workflow artifacts
+troubleshoot_artifacts/
+workflow_logs/
+
+# User-specific SSH configs (keep template only)
+# ssh_config.template should be tracked
+# ssh_config should not
+ssh_config
+known_hosts
+
+# API keys and secrets (already covered by .env but being explicit)
+*.secret
+secrets.json
+credentials.json
+
+# Temporary command history
+.command_history
+.troubleshoot_history
