--- a/.gitignore
+++ b/.gitignore
@@ -1,363 +1,81 @@
-# Byte-compiled / optimized / DLL files
+# Python
 __pycache__/
 *.py[cod]
-*$py.class
-
-# C extensions
+*.pyo
+*.pyd
 *.so
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
 .pytest_cache/
-cover/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-.pybuilder/
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple frequenvironments; otherwise, check them in:
-# .python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/#use-with-ide
-.pdm.toml
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
 .mypy_cache/
-.dmypy.json
-dmypy.json
+.ruff_cache/
+.coverage*
+.cache/
+build/
+dist/
+*.egg-info/
+*.egg
 
-# Pyre type checker
-.pyre/
+# Virtual environments
+.venv/
+venv/
+env/
+ENV/
+.python-version
 
-# pytype static type analyzer
-.pytype/
+# Environment and secrets
+.env
+.env.*
+*.pem
+*.ppk
+id_rsa
+id_ecdsa
+id_ed25519
 
-# Cython debug symbols
-cython_debug/
-
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be added to the global gitignore or merged into this project gitignore.  For PyCharm
-#  Community Edition, use 'PyCharmsCE' as filename.
+# Editors/OS
+vscode/
 .idea/
+.DS_Store
+Thumbs.db
 
-# Visual Studio Code
-.vscode/
-*.code-workspace
+# Node/Frontend
+node_modules/
+frontend/node_modules/
+*.log
+npm-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
-# Sublime Text
-*.sublime-project
-*.sublime-workspace
+# Testing
+tests/
+test_*.py
+*_test.py
+playwright-report/
+test-results/
+coverage/
+htmlcov/
+.nyc_output/
+*.spec.js
+*.test.js
+TEST_RESULTS.md
 
-# Atom
-.atom/
+# Playwright
+tests/node_modules/
+tests/playwright-report/
+tests/test-results/
+tests/.cache/
+tests/package-lock.json
 
-# Vim
+# Test artifacts
+screenshots/
+videos/
+traces/
+
+# Misc
 *.swp
 *.swo
-*~
+~$*
 
-# Emacs
-*~
-\#*\#
-/.emacs.desktop
-/.emacs.desktop.lock
-*.elc
-auto-save-list
-tramp
-.\#*
-
-# macOS
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Windows
-Thumbs.db
-Thumbs.db:encryptable
-ehthumbs.db
-ehthumbs_vista.db
-*.tmp
-*.temp
-*.bak
-*.swp
-*~.nib
-local.properties
-.settings/
-.loadpath
-.recommenders
-
-# Windows Folder config file
-[Dd]esktop.ini
-
-# Windows Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msix
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-
-# Linux
-*~
-
-# KDE directory preferences
-.directory
-
-# Linux trash folder which might appear on any partition or disk
-.Trash-*
-
-# .nfs files are created when an open file is removed but is still being accessed
-.nfs*
-
-# Project-specific ignores
-# Database files
-*.db
-*.sqlite
-*.sqlite3
-pilot.db
-
-# Log files
-*.log
-logs/
-log/
-
-# Temporary files
-*.tmp
-*.temp
-temp/
-tmp/
-
-# Node.js (if frontend dependencies are needed)
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Python virtual environment
-venv/
-env/
-.env
-
-# SSL certificates
-*.pem
-*.key
-*.crt
-
-# IDE and Editor files
-.vscode/
-.idea/
-*.sublime-*
-*.code-workspace
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Dependencies that can be installed
-requirements.txt.lock
-Pipfile.lock
-
-# Local development files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# SSH keys (if accidentally included)
-*.pem
-id_rsa*
-*.private
-
-# Application specific
-# Backup files
-*.bak
-*.backup
-*.orig
-
-# Runtime data
-pids/
-*.pid
-*.seed
-*.pid.lock
-
-# Documentation build
-docs/_build/
-
-# Coverage reports
-htmlcov/
-.coverage
-.coverage.*
-
-# Cache directories
-.cache/
-.pytest_cache/
-
-# Distribution directories
-dist/
-build/
-
-# Installer scripts (optional)
-install_dependencies_wsl.sh
-
-# Setup guides (if you prefer not to track)
-# SETUP_GUIDE.md
-
-# OpsPilot specific
-# SSH session data
-ssh_sessions/
-*.session
-
-# Test outputs
-test_output/
-test_results/
-
-# Local configuration overrides
-config.local.py
-settings.local.py
-
-# Troubleshooting workflow artifacts
-troubleshoot_artifacts/
-workflow_logs/
-
-# User-specific SSH configs (keep template only)
-# ssh_config.template should be tracked
-# ssh_config should not
-ssh_config
-known_hosts
-
-# API keys and secrets (already covered by .env but being explicit)
-*.secret
-secrets.json
-credentials.json
-
-# Temporary command history
-.command_history
-.troubleshoot_history
+# Playwright
+/test-results/
+/playwright-report/
+/playwright/.cache/
+/playwright/.auth/
