--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ["python311", "pip", "gcc", "pkg-config"]
+nixPkgs = ["python311Full", "gcc", "pkg-config"]
 
 [phases.install]
 cmds = [
