--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,8 +3,9 @@ nixPkgs = ["python311Full", "gcc", "pkg-config"]
 
 [phases.install]
 cmds = [
+  "python -m ensurepip --upgrade",
   "python -m pip install --upgrade pip",
-  "pip install -r requirements.txt"
+  "python -m pip install -r requirements.txt"
 ]
 
 [start]
