Enhanced cmd generation + added fallback cmd generation + warning box

--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
   "name": "opspilot",
   "version": "1.0.0",
-  "description": "OpsPilot is an intelligent DevOps assistant with two powerful features:",
+  "description": "OpsPilot is an intelligent DevOps assistant.",
   "main": "index.js",
   "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
-  "devDependencies": {
-    "@playwright/test": "^1.56.0",
-    "@types/node": "^24.7.0"
-  }
+  "type": "commonjs"
 }
