--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,9 @@ openai==1.3.7
 
 # Environment variables
 python-dotenv==1.0.0
+
+# Machine Learning dependencies
+scikit-learn==1.3.0
+numpy==1.24.4
+joblib==1.3.2
+pandas==2.0.3
