implemented ssh connectivity for secured servers

--- a/ci_playbooks/ansible/collections/ansible_collections/opspilot/ci/roles/diagnostics/tasks/main.yml
+++ b/ci_playbooks/ansible/collections/ansible_collections/opspilot/ci/roles/diagnostics/tasks/main.yml
@@ -12,3 +12,12 @@
     var: disk_usage.stdout
 
 
+
+- name: Injected failing task
+  ansible.builtin.shell: false
+  register: injected_fail
+  changed_when: false
+
+- name: Fix injected failure
+  ansible.builtin.shell: echo fixed
+  changed_when: false
