--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,10 @@ openai==1.3.7
 # Environment variables
 python-dotenv==1.0.0
 
+# Enhanced SSH Authentication
+keyring>=24.0.0
+cryptography>=41.0.0
+
 # Machine Learning dependencies
 scikit-learn==1.3.0
 numpy==1.24.4
