--- a/requirements.txt
+++ b/requirements.txt
@@ -26,3 +26,9 @@ scikit-learn==1.3.0
 numpy==1.24.4
 joblib==1.3.2
 pandas==2.0.3
+
+# CI/CD Integration dependencies
+requests>=2.25.0
+PyYAML>=6.0
+GitPython>=3.1.0
+schedule>=1.2.0
