--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "OpsPilot is an intelligent DevOps assistant.",
   "main": "index.js",
   "scripts": {
-  "test": "mocha \"frontend/tests/**/*.js\" --exit"
+    "test": "jest \"frontend/tests/**/*.js\" --env=jsdom"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "jsdom": "^22.1.0",
     "mocha": "^10.2.0"
   }
